--- a/package.json
+++ b/package.json
@@ -4,30 +4,25 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "prettify": "prettier -l --write \"**/*.js\"",
-    "test": "jest",
     "dev": "nodemon -L src/index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mysql2": "^2.3.3",
-    "sqlite3": "^5.1.2",
-    "uuid": "^9.0.0",
-    "wait-port": "^1.0.4"
-  },
-  "resolutions": {
-    "ansi-regex": "5.0.1"
-  },
-  "prettier": {
-    "trailingComma": "all",
-    "tabWidth": 4,
-    "useTabs": false,
-    "semi": true,
-    "singleQuote": true
+    "express": "^5.2.1",
+    "mysql2": "^3.16.1",
+    "sqlite3": "^5.1.7",
+    "uuid": "^13.0.0",
+    "wait-port": "^1.1.0"
   },
   "devDependencies": {
-    "jest": "^29.3.1",
-    "nodemon": "^2.0.20",
-    "prettier": "^2.7.1"
+    "nodemon": "^3.1.9"
+  },
+  "overrides": {
+    "tar": "7.5.4",
+    "glob": "11.1.0",
+    "semver": "7.5.2",
+    "cross-spawn": "7.0.5",
+    "braces": "3.0.3",
+    "http-cache-semantics": "4.1.1",
+    "socks": "2.8.1"
   }
 }
